# EnhancedNotes

./: .gitignore  App.js  LICENSE  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: BUCK  build.gradle
android/app/src/debug/java/com/enhancednotes/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/enhancednotes/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
fastapi/: main.py  pyproject.toml
ios/: Podfile
ios/enhancednotes/: Info.plist
ios/enhancednotes.xcodeproj/: project.pbxproj
ios/enhancednotes.xcodeproj/xcshareddata/xcschemes/: enhancednotes.xcscheme
ios/enhancednotes/Base.lproj/: LaunchScreen.xib
src/: App.js
