[tool.poetry]
name = "enhanced-notes-fastapi"
version = "0.1.0"
description = "The FastAPI backend for functions that need Python"
authors = ["ASR-X"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
Wikipedia-API = "^0.5.4"
nltk = "^3.5"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
